[gd_scene load_steps=4 format=2]

[ext_resource path="res://ControlPanel/Radio/Button.png" type="Texture" id=1]
[ext_resource path="res://ControlPanel/Radio/RadioButton.gd" type="Script" id=2]
[ext_resource path="res://Sound/Alien Gibberish/GibRadio.wav" type="AudioStream" id=3]

[node name="Radio" type="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -552.0
margin_bottom = -976.0
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0
[connection signal="button_down" from="." to="." method="_on_Radio_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Control_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Control_pressed"]
